--- a/css/index.css
+++ b/css/index.css
@@ -142,3 +142,22 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
 	background-color: lightcoral;
 }
+
+.fadeout{
+	opacity: 0;
+	transition: .5s;
+}
+
+input, label{
+	display: inline;
+}
+
+#filtro-tabela{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+
+.campo-invisivel{
+	display: none;
+}
